k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filevault-ingress
  namespace: filevault
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '5g'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/limit-rps: '100'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - filevault.local
      secretName: filevault-tls
  rules:
    - host: filevault.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filevault-api
                port:
                  number: 8443
